Fix iterator buttons on iphone

--- a/assets/scss/components/_product.scss
+++ b/assets/scss/components/_product.scss
@@ -89,6 +89,7 @@
         button {
             width: $button-size;
             height: $button-size;
+            padding: 0;
             border-radius: 100%;
             background: $color-primary;
             color: #fff;
